fix 'mouse' on mobile

--- a/template/style/main.css
+++ b/template/style/main.css
@@ -77,6 +77,12 @@ main {
     left: calc(50% - 10px);
 }
 
+@media (max-width: 480px) {
+    #mouse {
+        bottom: 80px;
+    }
+}
+
 #mouse::after {
     content: "";
     display: block;
@@ -101,14 +107,6 @@ main {
         top: 25px;
         opacity: 0.3;
     }
-}
-
-.grid_gallery {
-    display: grid;
-    width: 100%;
-    height: 50vw;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(4, 1fr);
 }
 
 #p_background_image {
